force-app/main/default/objects/Book__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>