force-app/main/default/objects/Book__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you have read this book</description>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>