force-app/main/default/objects/Book__c/fields/Want_to_read__c.field-meta.xml
<CustomField>
    <fullName>Want_to_read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want to read</label>
    <type>Checkbox</type>
</CustomField>